--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react-redux": "^7.1.33",
     "@types/redux-thunk": "^2.1.0",
     "expo": "~51.0.19",
-    "expo-constants": "~16.0.2",
+    "expo-constants": "^16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
@@ -33,6 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-bouncy-checkbox": "^4.0.1",
+    "react-native-calendars": "^1.1305.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
