--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@types/react-redux": "^7.1.33",
     "@types/redux-thunk": "^2.1.0",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.19",
     "expo-constants": "^16.0.2",
     "expo-font": "~12.0.7",
